--- a/generators/app/templates/.babelrc
+++ b/generators/app/templates/.babelrc
@@ -1,12 +1,11 @@
 {
-  "presets": [
-      [
-          "@babel/preset-env",
-          {
-              "modules": false
-          }
-      ],
-      "@babel/preset-react"
-  ],
-  "plugins": ["@babel/proposal-class-properties"]
+    "presets": [
+        [
+            "@babel/preset-env"
+        ],
+        "@babel/preset-react"
+    ],
+    "plugins": [
+        "@babel/plugin-syntax-dynamic-import"
+    ]
 }
