--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@feflow/generator-example",
-  "version": "0.0.8",
-  "description": "Feflow React+Redux开发基础脚手架",
-  "homepage": "https://github.com/feflow/generator-example",
+  "version": "0.0.5",
+  "description": "Feflow example template",
+  "homepage": "https://github.com/feflow/generator-ivweb",
   "files": [
-    "generators"
+    "generators",
+    "generator.json"
   ],
   "main": "generators/index.js",
   "scripts": {
@@ -13,12 +14,11 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
   },
   "keywords": [
-    "feflow-generator",
-    "ivweb",
+    "templates",
     "feflow"
   ],
   "dependencies": {
-    "chalk": "^4.0.0",
+    "chalk": "^2.4.2",
     "mkdirp": "^0.5.1",
     "shelljs": "^0.8.3",
     "yeoman-generator": "^1.0.1",
