--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "@feflow/generator-example",
-  "version": "0.0.5",
+  "version": "0.0.7",
   "description": "Feflow example template",
   "homepage": "https://github.com/feflow/generator-ivweb",
   "files": [
-    "generators",
-    "generator.json"
+    "generators"
   ],
   "main": "generators/index.js",
   "scripts": {
@@ -19,6 +18,7 @@
   ],
   "dependencies": {
     "chalk": "^2.4.2",
+    "minimist": "^1.2.5",
     "mkdirp": "^0.5.1",
     "shelljs": "^0.8.3",
     "yeoman-generator": "^1.0.1",
